--- a/resources/template/LIST.md.j2
+++ b/resources/template/LIST.md.j2
@@ -19,7 +19,7 @@ There 3 types of polyfill:
 ## Details
 
 {% for row in var %}
-### <a id="{{ row.name|replace('/','_') }}"></a>Polyfill `{{ row.name }}`
+### <a id="{{ row.name|replace('/','_') }}"></a>Polyfill `{{ row.name }}` [<img src="https://packagist.org/apple-touch-icon.png" height="32" width="32"/>](https://packagist.org/packages/{{ row.name }})
 **Type:** `{{ row.type }}`
 
 **Require:**
